# CMGym-examples

./: README.md
basicProject/: CMakeLists.txt
basicProject/libs/dynamicLib/: CMakeLists.txt
basicProject/libs/staticLib/: CMakeLists.txt
